test/parsing/shannon/invalidToken.good
invalidToken.chpl:3: error: syntax error near 'one'
